--- a/index.html
+++ b/index.html
@@ -40,9 +40,40 @@
           <p class="card__profile">Bruno Lopez</p>
           <p class="card__info card__info--time">33 minutes</p>
           <p class="card__info card__info--visualization">99 visualizations</p>
-          <button class="card__button card__button--play card__button--emphasis">Play Now!!</button>
+          <button class="card__button card__button--play card__button--emphasis" aria-label="Watch now">Play Now!!</button>
 		</div>
-	  </article>	  
+      </article>
+      <article class="card card--recent video-recent">
+          <h3 class="card__title">Recent Videos</h3>
+          <a class="card__link" href="#">See all</a>
+          <ul class="card__list">
+              <li class="card__item">
+                  <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
+                  <h4 class="card__item-title">HZC - Love Machine</h4>
+                  <p class="card__item-profile">Bruno Lopez</p>
+              </li>
+              <li class="card__item">
+                  <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
+                  <h4 class="card__item-title">HZC - Love Machine</h4>
+                  <p class="card__item-profile">Bruno Lopez</p>
+              </li>
+              <li class="card__item">
+                  <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
+                  <h4 class="card__item-title">HZC - Love Machine</h4>
+                  <p class="card__item-profile">Bruno Lopez</p>
+              </li>
+              <li class="card__item">
+                  <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
+                  <h4 class="card__item-title">HZC - Love Machine</h4>
+                  <p class="card__item-profile">Bruno Lopez</p>
+              </li>
+              <li class="card__item">
+                  <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
+                  <h4 class="card__item-title">HZC - Love Machine</h4>
+                  <p class="card__item-profile">Bruno Lopez</p>
+              </li>
+          </ul>
+      </article>
 	</main>
 	<script src="assets/js/index.js"></script>
   </body>
