--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   </head>
   <body>
 	<header class="header">
-	  <button class="header__menu"><i></i></button>
+	  <button class="header__menu" aria-label="Menu"><i></i></button>
 	  <img class="header__logo" alt="HZC's Logo" src="assets/img/logo.svg" />
+      <p class="header__profile">Jefferson Campos</p>
 	  <button class="header__notification"><i></i></button>
 	</header>
 	<nav class="lateral-menu">
@@ -30,8 +31,8 @@
 	  <a href="#" class="lateral-menu__link lateral-menu__link--paints">Paints</a>
 	</nav>
 	<main class="main">
-	  <h2 class="title-page">Start</h2>
-	  <article class="card card--emphasis emphasis--video">
+	  <h2 class="page-title">Start</h2>
+      <article class="card card--emphasis video-emphasis">
 		<img class="card__image card__image--mobile" alt="Card's Banner" src="assets/img/banner-mobile_1.png"/>
 		<img class="card__image card__image--desktop" alt="Card's Banner" src="assets/img/banner_1.png"/>
 		<div class="card__content">
@@ -74,6 +75,130 @@
               </li>
           </ul>
       </article>
+      <section class="section video-section">
+          <!-- FIXME not working yet title -->
+          <h3 class="section-title">Top Videos</h3>
+          <article class="card">
+              <img class="card__image" src="assets/img/video_1.png" alt="Vídeo">
+              <div class="card__content">
+                  <p class="card__profile">Bruno Lopez</p>
+                  <h3 class="card__title">HZC - Title</h3>
+                  <p class="card__info card__info--time">33 minutes</p>
+                  <button class="card__button card__button--play"></button>
+              </div>
+          </article>
+          <article class="card">
+              <img class="card__image" src="assets/img/video_1.png" alt="Vídeo">
+              <div class="card__content">
+                  <p class="card__profile">Bruno Lopez</p>
+                  <h3 class="card__title">HZC - Title</h3>
+                  <p class="card__info card__info--time">33 minutes</p>
+                  <button class="card__button card__button--play"></button>
+              </div>
+          </article>
+          <article class="card">
+              <img class="card__image" src="assets/img/video_1.png" alt="Vídeo">
+              <div class="card__content">
+                  <p class="card__profile">Bruno Lopez</p>
+                  <h3 class="card__title">HZC - Title</h3>
+                  <p class="card__info card__info--time">33 minutes</p>
+                  <button class="card__button card__button--play"></button>
+              </div>
+          </article>
+          <article class="card">
+              <img class="card__image" src="assets/img/video_1.png" alt="Vídeo">
+              <div class="card__content">
+                  <p class="card__profile">Bruno Lopez</p>
+                  <h3 class="card__title">HZC - Title</h3>
+                  <p class="card__info card__info--time">33 minutes</p>
+                  <button class="card__button card__button--play"></button>
+              </div>
+          </article>
+      </section>
+      <!--
+      <article class="card recent--card recent-products">
+        <h3 class="card__title">Recent Videos</h3>
+        <a class="card__link" href="#">See all</a>
+        <ul class="card__list">
+            <li class="card__item">
+                <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
+                <h4 class="card__item-title">HZC - Love machine</h4>
+                <p class="card__item-profile">Bruno Lopez</p>
+            </li>
+            <li class="card__item">
+                <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
+                <h4 class="card__item-title">HZC - Love machine</h4>
+                <p class="card__item-profile">Bruno Lopez</p>
+            </li>
+            <li class="card__item">
+                <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
+                <h4 class="card__item-title">HZC - Love machine</h4>
+                <p class="card__item-profile">Bruno Lopez</p>
+            </li>
+            <li class="card__item">
+                <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
+                <h4 class="card__item-title">HZC - Love machine</h4>
+                <p class="card__item-profile">Bruno Lopez</p>
+            </li>
+            <li class="card__item">
+                <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
+                <h4 class="card__item-title">HZC - Love machine</h4>
+                <p class="card__item-profile">Bruno Lopez</p>
+            </li>
+        </ul>
+      </article>
+      <article class="card card--emphasis product-emphasis">
+        <img class="card__image card__image--mobile" src="assets/img/banner-mobile_2.png" alt="Card's banner">
+        <img class="card__image card__image--desktop" src="assets/img/banner_2.png" alt="Card's banner">
+        <div class="card__content">
+            <p class="card__emphasis">Emphasis Video</p>
+            <h3 class="card__title">HZC - Title</h3>
+            <p class="card__profile">Bruno Lopez</p>
+            <p class="card__info card__info--time">33 minutes</p>
+            <span class="p card__info card__info--visualization">8390 visualizations</span>
+            <button class="card__button card__button--play card__button--emphasis">Watch now</button>
+        </div>
+      </article>
+      <section class="section product-section">
+         <h3 class="section-title">Top Videos</h3>
+         <article class="card">
+             <img class="card__image" src="assets/img/video_1.png" alt="Video">
+             <div class="card__content">
+                 <p class="card__profile">Bruno Lopez</p>
+                 <h3 class="card__title">HZC - Title</h3>
+                 <p class="card__info card__info--time">33 minutes</p>
+                 <button class="card__button card__button--play" aria-label="Watch now!!"></button>
+             </div>
+         </article>
+         <article class="card">
+             <img class="card__image" src="assets/img/video_1.png" alt="Video">
+             <div class="card__content">
+                 <p class="card__profile">Bruno Lopez</p>
+                 <h3 class="card__title">HZC - Title</h3>
+                 <p class="card__info card__info--time">33 minutes</p>
+                 <button class="card__button card__button--play" aria-label="Watch now!!"></button>
+             </div>
+         </article>
+         <article class="card">
+             <img class="card__image" src="assets/img/video_1.png" alt="Video">
+             <div class="card__content">
+                 <p class="card__profile">Bruno Lopez</p>
+                 <h3 class="card__title">HZC - Title</h3>
+                 <p class="card__info card__info--time">33 minutes</p>
+                 <button class="card__button card__button--play" aria-label="Watch now!!"></button>
+             </div>
+         </article>
+         <article class="card">
+             <img class="card__image" src="assets/img/video_1.png" alt="Video">
+             <div class="card__content">
+                 <p class="card__profile">Bruno Lopez</p>
+                 <h3 class="card__title">HZC - Title</h3>
+                 <p class="card__info card__info--time">33 minutes</p>
+                 <button class="card__button card__button--play" aria-label="Watch now!!"></button>
+             </div>
+         </article>
+     </section>
+      -->
 	</main>
 	<script src="assets/js/index.js"></script>
   </body>
