--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div class="card__content">
           <p class="card__emphasis">Emphasis Videos</p>
           <h3 class="card__title">HZC - title</h3>
-          <p class="card__profile">Bruno Lopez</p>
+          <p class="card__profile">Jefferson Campos</p>
           <p class="card__info card__info--time">33 minutes</p>
           <p class="card__info card__info--visualization">99 visualizations</p>
           <button class="card__button card__button--play card__button--emphasis" aria-label="Watch now">Play Now!!</button>
@@ -51,37 +51,36 @@
               <li class="card__item">
                   <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
                   <h4 class="card__item-title">HZC - Love Machine</h4>
-                  <p class="card__item-profile">Bruno Lopez</p>
+                  <p class="card__item-profile">Jefferson Campos</p>
               </li>
               <li class="card__item">
                   <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
                   <h4 class="card__item-title">HZC - Love Machine</h4>
-                  <p class="card__item-profile">Bruno Lopez</p>
+                  <p class="card__item-profile">Jefferson Campos</p>
               </li>
               <li class="card__item">
                   <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
                   <h4 class="card__item-title">HZC - Love Machine</h4>
-                  <p class="card__item-profile">Bruno Lopez</p>
+                  <p class="card__item-profile">Jefferson Campos</p>
               </li>
               <li class="card__item">
                   <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
                   <h4 class="card__item-title">HZC - Love Machine</h4>
-                  <p class="card__item-profile">Bruno Lopez</p>
+                  <p class="card__item-profile">Jefferson Campos</p>
               </li>
               <li class="card__item">
                   <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
                   <h4 class="card__item-title">HZC - Love Machine</h4>
-                  <p class="card__item-profile">Bruno Lopez</p>
+                  <p class="card__item-profile">Jefferson Campos</p>
               </li>
           </ul>
       </article>
       <section class="section video-section">
-          <!-- FIXME not working yet title -->
           <h3 class="section-title">Top Videos</h3>
           <article class="card">
               <img class="card__image" src="assets/img/video_1.png" alt="Vídeo">
               <div class="card__content">
-                  <p class="card__profile">Bruno Lopez</p>
+                  <p class="card__profile">Jefferson Campos</p>
                   <h3 class="card__title">HZC - Title</h3>
                   <p class="card__info card__info--time">33 minutes</p>
                   <button class="card__button card__button--play"></button>
@@ -90,7 +89,7 @@
           <article class="card">
               <img class="card__image" src="assets/img/video_1.png" alt="Vídeo">
               <div class="card__content">
-                  <p class="card__profile">Bruno Lopez</p>
+                  <p class="card__profile">Jefferson Campos</p>
                   <h3 class="card__title">HZC - Title</h3>
                   <p class="card__info card__info--time">33 minutes</p>
                   <button class="card__button card__button--play"></button>
@@ -99,7 +98,7 @@
           <article class="card">
               <img class="card__image" src="assets/img/video_1.png" alt="Vídeo">
               <div class="card__content">
-                  <p class="card__profile">Bruno Lopez</p>
+                  <p class="card__profile">Jefferson Campos</p>
                   <h3 class="card__title">HZC - Title</h3>
                   <p class="card__info card__info--time">33 minutes</p>
                   <button class="card__button card__button--play"></button>
@@ -108,97 +107,95 @@
           <article class="card">
               <img class="card__image" src="assets/img/video_1.png" alt="Vídeo">
               <div class="card__content">
-                  <p class="card__profile">Bruno Lopez</p>
+                  <p class="card__profile">Jefferson Campos</p>
                   <h3 class="card__title">HZC - Title</h3>
                   <p class="card__info card__info--time">33 minutes</p>
                   <button class="card__button card__button--play"></button>
               </div>
           </article>
       </section>
-      <!--
-      <article class="card recent--card recent-products">
+      <article class="card card--recent recent-products">
         <h3 class="card__title">Recent Videos</h3>
         <a class="card__link" href="#">See all</a>
         <ul class="card__list">
             <li class="card__item">
                 <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
                 <h4 class="card__item-title">HZC - Love machine</h4>
-                <p class="card__item-profile">Bruno Lopez</p>
+                <p class="card__item-profile">Jefferson Campos</p>
             </li>
             <li class="card__item">
                 <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
                 <h4 class="card__item-title">HZC - Love machine</h4>
-                <p class="card__item-profile">Bruno Lopez</p>
+                <p class="card__item-profile">Jefferson Campos</p>
             </li>
             <li class="card__item">
                 <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
                 <h4 class="card__item-title">HZC - Love machine</h4>
-                <p class="card__item-profile">Bruno Lopez</p>
+                <p class="card__item-profile">Jefferson Campos</p>
             </li>
             <li class="card__item">
                 <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
                 <h4 class="card__item-title">HZC - Love machine</h4>
-                <p class="card__item-profile">Bruno Lopez</p>
+                <p class="card__item-profile">Jefferson Campos</p>
             </li>
             <li class="card__item">
                 <img class="card__item-thumbnail" src="assets/img/miniatura_1.png" alt="Thumbnail">
                 <h4 class="card__item-title">HZC - Love machine</h4>
-                <p class="card__item-profile">Bruno Lopez</p>
+                <p class="card__item-profile">Jefferson Campos</p>
             </li>
         </ul>
       </article>
       <article class="card card--emphasis product-emphasis">
-        <img class="card__image card__image--mobile" src="assets/img/banner-mobile_2.png" alt="Card's banner">
-        <img class="card__image card__image--desktop" src="assets/img/banner_2.png" alt="Card's banner">
-        <div class="card__content">
-            <p class="card__emphasis">Emphasis Video</p>
-            <h3 class="card__title">HZC - Title</h3>
-            <p class="card__profile">Bruno Lopez</p>
-            <p class="card__info card__info--time">33 minutes</p>
-            <span class="p card__info card__info--visualization">8390 visualizations</span>
-            <button class="card__button card__button--play card__button--emphasis">Watch now</button>
-        </div>
+          <img class="card__image card__image--mobile" src="assets/img/banner-mobile_2.png" alt="Card's banner">
+          <img class="card__image card__image--desktop" src="assets/img/banner_2.png" alt="Card's banner">
+          <div class="card__content">
+              <p class="card__emphasis">Emphasis Video</p>
+              <h3 class="card__title">HZC - Title</h3>
+              <p class="card__profile">Jefferson Campos</p>
+              <p class="card__info card__info--time">33 minutes</p>
+              <span class="p card__info card__info--visualization">8390 visualizations</span>
+              <button class="card__button card__button--play card__button--emphasis">Watch now</button>
+          </div>
       </article>
       <section class="section product-section">
-         <h3 class="section-title">Top Videos</h3>
-         <article class="card">
-             <img class="card__image" src="assets/img/video_1.png" alt="Video">
-             <div class="card__content">
-                 <p class="card__profile">Bruno Lopez</p>
-                 <h3 class="card__title">HZC - Title</h3>
-                 <p class="card__info card__info--time">33 minutes</p>
-                 <button class="card__button card__button--play" aria-label="Watch now!!"></button>
-             </div>
-         </article>
-         <article class="card">
-             <img class="card__image" src="assets/img/video_1.png" alt="Video">
-             <div class="card__content">
-                 <p class="card__profile">Bruno Lopez</p>
-                 <h3 class="card__title">HZC - Title</h3>
-                 <p class="card__info card__info--time">33 minutes</p>
-                 <button class="card__button card__button--play" aria-label="Watch now!!"></button>
-             </div>
-         </article>
-         <article class="card">
-             <img class="card__image" src="assets/img/video_1.png" alt="Video">
-             <div class="card__content">
-                 <p class="card__profile">Bruno Lopez</p>
-                 <h3 class="card__title">HZC - Title</h3>
-                 <p class="card__info card__info--time">33 minutes</p>
-                 <button class="card__button card__button--play" aria-label="Watch now!!"></button>
-             </div>
-         </article>
-         <article class="card">
-             <img class="card__image" src="assets/img/video_1.png" alt="Video">
-             <div class="card__content">
-                 <p class="card__profile">Bruno Lopez</p>
-                 <h3 class="card__title">HZC - Title</h3>
-                 <p class="card__info card__info--time">33 minutes</p>
-                 <button class="card__button card__button--play" aria-label="Watch now!!"></button>
-             </div>
-         </article>
+          <h3 class="section-title">Top Videos</h3>
+          <article class="card">
+              <img class="card__image" src="assets/img/video_1.png" alt="Video">
+              <div class="card__content">
+                  <p class="card__profile">Jefferson Campos</p>
+                  <h3 class="card__title">HZC - Title</h3>
+                  <p class="card__info card__info--time">33 minutes</p>
+                  <button class="card__button card__button--play" aria-label="Watch now!!"></button>
+              </div>
+          </article>
+          <article class="card">
+              <img class="card__image" src="assets/img/video_1.png" alt="Video">
+              <div class="card__content">
+                  <p class="card__profile">Jefferson Campos</p>
+                  <h3 class="card__title">HZC - Title</h3>
+                  <p class="card__info card__info--time">33 minutes</p>
+                  <button class="card__button card__button--play" aria-label="Watch now!!"></button>
+              </div>
+          </article>
+          <article class="card">
+              <img class="card__image" src="assets/img/video_1.png" alt="Video">
+              <div class="card__content">
+                  <p class="card__profile">Jefferson Campos</p>
+                  <h3 class="card__title">HZC - Title</h3>
+                  <p class="card__info card__info--time">33 minutes</p>
+                  <button class="card__button card__button--play" aria-label="Watch now!!"></button>
+              </div>
+          </article>
+          <article class="card">
+              <img class="card__image" src="assets/img/video_1.png" alt="Video">
+              <div class="card__content">
+                  <p class="card__profile">Jefferson Campos</p>
+                  <h3 class="card__title">HZC - Title</h3>
+                  <p class="card__info card__info--time">33 minutes</p>
+                  <button class="card__button card__button--play" aria-label="Watch now!!"></button>
+              </div>
+          </article>
      </section>
-      -->
 	</main>
 	<script src="assets/js/index.js"></script>
   </body>
